force-app/main/default/objects/ID_Contact__c/ID_Contact__c.object-meta.xml
<CustomObject>
    <label>ID_Contact_Manual</label>
    <nameField>
        <label>ID_Contact_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID_Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>