force-app/main/default/objects/ID_Contact__c/fields/addr_City__c.field-meta.xml
<CustomField>
    <fullName>addr_City__c</fullName>
    <label>Addr_City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>