force-app/main/default/objects/ID_Contact__c/fields/addr_Country__c.field-meta.xml
<CustomField>
    <fullName>addr_Country__c</fullName>
    <label>Addr_Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>