force-app/main/default/objects/ID_Contact__c/fields/addr_region__c.field-meta.xml
<CustomField>
    <fullName>addr_region__c</fullName>
    <label>Addr_Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>