force-app/main/default/objects/ID_Contact__c/fields/addr_subdistrict__c.field-meta.xml
<CustomField>
    <fullName>addr_subdistrict__c</fullName>
    <label>Addr_Subdistrict</label>
    <length>255</length>
    <type>Text</type>
</CustomField>