force-app/main/default/objects/ID_Contact__c/fields/addr_Ward__c.field-meta.xml
<CustomField>
    <fullName>addr_Ward__c</fullName>
    <label>Addr_Ward</label>
    <length>100</length>
    <type>Text</type>
</CustomField>