force-app/main/default/objects/ID_Contact__c/fields/br_prevbrandname__c.field-meta.xml
<CustomField>
    <fullName>br_prevbrandname__c</fullName>
    <label>BR_PrevBrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>