force-app/main/default/objects/ID_Contact__c/fields/br_relationtype__c.field-meta.xml
<CustomField>
    <fullName>br_relationtype__c</fullName>
    <label>BR_RelationType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>