force-app/main/default/objects/ID_Contact__c/fields/child_dob__c.field-meta.xml
<CustomField>
    <fullName>child_dob__c</fullName>
    <label>Child_DOB</label>
    <length>30</length>
    <type>Text</type>
</CustomField>