force-app/main/default/objects/ID_Contact__c/fields/child_lastname__c.field-meta.xml
<CustomField>
    <fullName>child_lastname__c</fullName>
    <label>Child_LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>