force-app/main/default/objects/ID_Contact__c/fields/contact_ethnicity__c.field-meta.xml
<CustomField>
    <fullName>contact_ethnicity__c</fullName>
    <label>Contact_Ethnicity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>