force-app/main/default/objects/ID_Contact__c/fields/contact_gender__c.field-meta.xml
<CustomField>
    <fullName>contact_gender__c</fullName>
    <label>Contact_Gender</label>
    <length>10</length>
    <type>Text</type>
</CustomField>