force-app/main/default/objects/ID_Contact__c/fields/cr_FieldDieticianId__c.field-meta.xml
<CustomField>
    <fullName>cr_FieldDieticianId__c</fullName>
    <label>CR_FieldDieticianId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>