force-app/main/default/objects/ID_Contact__c/fields/cr_SampleGiven__c.field-meta.xml
<CustomField>
    <fullName>cr_SampleGiven__c</fullName>
    <label>CR_SampleGiven</label>
    <length>255</length>
    <type>Text</type>
</CustomField>