force-app/main/default/objects/ID_Contact__c/fields/cr_sampleproductid__c.field-meta.xml
<CustomField>
    <fullName>cr_sampleproductid__c</fullName>
    <label>CR_SampleProductID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>