force-app/main/default/objects/ID_Contact__c/fields/cr_samplerequested__c.field-meta.xml
<CustomField>
    <fullName>cr_samplerequested__c</fullName>
    <label>CR_SampleRequested</label>
    <length>10</length>
    <type>Text</type>
</CustomField>