force-app/main/default/objects/ID_Contact__c/fields/cr_UTMCampaignText__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMCampaignText__c</fullName>
    <label>CR_UTMCampaignText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>