force-app/main/default/objects/ID_Contact__c/fields/cr_UTMTerm__c.field-meta.xml
<CustomField>
    <fullName>cr_UTMTerm__c</fullName>
    <label>CR_UTMTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>